// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Typography.P2 should render default markup when no props are passed 1`] = `
<p
  className="p2 p2--regular p2--onyx-base cdkJvx"
>
  Hello world
</p>
`;

exports[`Typography.P2 should render with a custom color prop that lacks variants 1`] = `
<p
  className="p2 p2--regular jhVopK"
  color="brand"
>
  Hello world
</p>
`;

exports[`Typography.P2 should render with a custom weight prop 1`] = `
<p
  className="p2 p2--semiBold p2--onyx-base ljvbbo"
>
  Hello world
</p>
`;

exports[`Typography.P2 should render with custom color and variant props 1`] = `
<p
  className="p2 p2--regular p2--accent01-dark cWpmsJ"
  color="accent01"
>
  Hello world
</p>
`;

exports[`Typography.P2 should render without children 1`] = `
<p
  className="p2 p2--regular p2--onyx-base cdkJvx"
/>
`;
